fix alignment

--- a/src/components/service/service.module.scss
+++ b/src/components/service/service.module.scss
@@ -6,14 +6,14 @@
     flex-direction: column;
     width: 250px;
     margin-right: 2rem;
+    justify-content: center;
+    align-items: center;
 
-    // min-width: 768px and max-width: 1024px
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
+    @media screen and (max-width: 768px){
         width: 100%;
-        justify-content: center;
-        align-items: center;
-        
-    }
+        margin-right: 0;
+        margin-bottom: 2rem;
+    }    
     .image{
 
         position: relative;
