--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -93,6 +93,7 @@ body {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        width: 100%;
       }
     }
     
